Adding dataset to mesh processor

--- a/modules/discretedata/CMakeLists.txt
+++ b/modules/discretedata/CMakeLists.txt
@@ -26,6 +26,7 @@ set(HEADER_FILES
     include/modules/discretedata/processors/createchannel.h
     include/modules/discretedata/processors/datasetfrombase.h
     include/modules/discretedata/processors/datasetsource.h
+    include/modules/discretedata/processors/meshfromdataset.h
     include/modules/discretedata/processors/segmentationvoxelizer.h
     include/modules/discretedata/processors/volumefromdataset.h
     include/modules/discretedata/properties/datachannelproperty.h
@@ -53,6 +54,7 @@ set(SOURCE_FILES
     src/processors/createchannel.cpp
     src/processors/datasetfrombase.cpp
     src/processors/datasetsource.cpp
+    src/processors/meshfromdataset.cpp
     src/processors/segmentationvoxelizer.cpp
     src/processors/volumefromdataset.cpp
     src/properties/datachannelproperty.cpp
