BaseGL: Initial work on refactoring and unififying the raycasters. Introduces a RaycasterComponent as a way of sharing functionalllity.

--- a/modules/basegl/CMakeLists.txt
+++ b/modules/basegl/CMakeLists.txt
@@ -21,6 +21,7 @@ set(HEADER_FILES
     include/modules/basegl/datavisualizer/meshvisualizer.h
     include/modules/basegl/datavisualizer/volumeraycastvisualizer.h
     include/modules/basegl/datavisualizer/volumeslicevisualizer.h
+    include/modules/basegl/processors/atlasvolumeraycaster.h
     include/modules/basegl/processors/axisalignedcutplane.h
     include/modules/basegl/processors/background.h
     include/modules/basegl/processors/cuberenderer.h
@@ -81,10 +82,18 @@ set(HEADER_FILES
     include/modules/basegl/processors/volumeprocessing/volumeregionshrink.h
     include/modules/basegl/processors/volumeprocessing/volumeshader.h
     include/modules/basegl/processors/volumeraycaster.h
+    include/modules/basegl/processors/volumeraycasterbase.h
     include/modules/basegl/processors/volumeslicegl.h
     include/modules/basegl/properties/linesettingsproperty.h
     include/modules/basegl/properties/splitterproperty.h
     include/modules/basegl/properties/stipplingproperty.h
+    include/modules/basegl/raycasting/backgroundcomponent.h
+    include/modules/basegl/raycasting/isotfcomponent.h
+    include/modules/basegl/raycasting/lightcomponent.h
+    include/modules/basegl/raycasting/positionindicatorcomponent.h
+    include/modules/basegl/raycasting/raycastercomponent.h
+    include/modules/basegl/raycasting/raycastingcomponent.h
+    include/modules/basegl/raycasting/sampletransformcomponent.h
     include/modules/basegl/rendering/linerenderer.h
     include/modules/basegl/rendering/splitterrenderer.h
     include/modules/basegl/viewmanager.h
@@ -109,6 +118,7 @@ set(SOURCE_FILES
     src/datavisualizer/meshvisualizer.cpp
     src/datavisualizer/volumeraycastvisualizer.cpp
     src/datavisualizer/volumeslicevisualizer.cpp
+    src/processors/atlasvolumeraycaster.cpp
     src/processors/axisalignedcutplane.cpp
     src/processors/background.cpp
     src/processors/cuberenderer.cpp
@@ -169,10 +179,18 @@ set(SOURCE_FILES
     src/processors/volumeprocessing/volumeregionshrink.cpp
     src/processors/volumeprocessing/volumeshader.cpp
     src/processors/volumeraycaster.cpp
+    src/processors/volumeraycasterbase.cpp
     src/processors/volumeslicegl.cpp
     src/properties/linesettingsproperty.cpp
     src/properties/splitterproperty.cpp
     src/properties/stipplingproperty.cpp
+    src/raycasting/backgroundcomponent.cpp
+    src/raycasting/isotfcomponent.cpp
+    src/raycasting/lightcomponent.cpp
+    src/raycasting/positionindicatorcomponent.cpp
+    src/raycasting/raycastercomponent.cpp
+    src/raycasting/raycastingcomponent.cpp
+    src/raycasting/sampletransformcomponent.cpp
     src/rendering/linerenderer.cpp
     src/rendering/splitterrenderer.cpp
     src/viewmanager.cpp
@@ -225,6 +243,9 @@ set(SHADER_FILES
     glsl/multichannelraycaster.frag
     glsl/pointrenderer.frag
     glsl/pointrenderer.vert
+    glsl/raycasting/raycaster.frag
+    glsl/raycasting/dvr.glsl
+    glsl/raycasting/iso.glsl
     glsl/sphereglyph.frag
     glsl/sphereglyph.geom
     glsl/sphereglyph.vert
