added simple random volume generator

--- a/modules/propertybasedtesting/CMakeLists.txt
+++ b/modules/propertybasedtesting/CMakeLists.txt
@@ -5,11 +5,12 @@ ivw_module(PropertyBasedTesting)
 #--------------------------------------------------------------------
 # Add header files
 set(HEADER_FILES
+    include/inviwo/propertybasedtesting/algorithm/coveringarray.h
     include/inviwo/propertybasedtesting/processors/faultycubeproxyprocessor.h
     include/inviwo/propertybasedtesting/processors/histogram.h
+    include/inviwo/propertybasedtesting/processors/randomvolumegenerator.h
     include/inviwo/propertybasedtesting/propertybasedtestingmodule.h
     include/inviwo/propertybasedtesting/propertybasedtestingmoduledefine.h
-	include/inviwo/propertybasedtesting/algorithm/coveringarray.h
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
@@ -18,6 +19,7 @@ ivw_group("Header Files" ${HEADER_FILES})
 set(SOURCE_FILES
     src/processors/faultycubeproxyprocessor.cpp
     src/processors/histogram.cpp
+    src/processors/randomvolumegenerator.cpp
     src/propertybasedtestingmodule.cpp
 )
 ivw_group("Source Files" ${SOURCE_FILES})
