--- a/modules/propertybasedtesting/CMakeLists.txt
+++ b/modules/propertybasedtesting/CMakeLists.txt
@@ -7,6 +7,7 @@ ivw_module(PropertyBasedTesting)
 set(HEADER_FILES
     include/inviwo/propertybasedtesting/algorithm/coveringarray.h
     include/inviwo/propertybasedtesting/algorithm/generatingassignments.h
+    include/inviwo/propertybasedtesting/algorithm/histogramtesting.h
     include/inviwo/propertybasedtesting/processors/faultycubeproxyprocessor.h
     include/inviwo/propertybasedtesting/processors/histogram.h
     include/inviwo/propertybasedtesting/processors/imagecomparator.h
@@ -19,7 +20,9 @@ ivw_group("Header Files" ${HEADER_FILES})
 #--------------------------------------------------------------------
 # Add source files
 set(SOURCE_FILES
+    src/algorithm/coveringarray.cpp
     src/algorithm/generatingassignments.cpp
+    src/algorithm/histogramtesting.cpp
     src/processors/faultycubeproxyprocessor.cpp
     src/processors/histogram.cpp
     src/processors/imagecomparator.cpp
