CMake: Refactornig our camke naming scheme. Use IVW_CFG_* for configuration settings. IVW_TEST_* for test settings IVW_APP_* for enabling vaiours apps, IVW_USE_* for enabling various libs Note the PRECOMPILE_HEADERS is not called IVW_CFG_PRECOMPILED_HEADERS

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,13 +1,12 @@
-if(IVW_TINY_GLFW_APPLICATION)
+if(IVW_APP_MINIMAL_GLFW)
     add_subdirectory(minimals/glfw)
 endif()
-if(IVW_TINY_QT_APPLICATION)
+if(IVW_APP_MINIMAL_QT)
     add_subdirectory(minimals/qt)
 endif()
-if(IVW_QT_APPLICATION)
+if(IVW_APP_INVIWO)
 	add_subdirectory(inviwo)
 endif()
-
-if(IVW_MODULE_PYTHON3)
+if(IVW_APP_PYTHON)
 	add_subdirectory(inviwopyapp)
 endif()
