--- a/ext/gtest/CMakeLists.txt
+++ b/ext/gtest/CMakeLists.txt
@@ -1,20 +1,15 @@
-if(IVW_UNITTESTS OR IVW_INTEGRATION_TESTS)
-    # Prevent overriding the parent project's compiler/linker
-    # settings on Windows
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+set(BUILD_GMOCK ON CACHE BOOL "Builds the googlemock subproject" FORCE)
+option(INSTALL_GTEST "Enable installation of googletest. (Projects embedding googletest may want to turn this OFF.)" OFF)
 
-    set(BUILD_GMOCK ON CACHE BOOL "Builds the googlemock subproject" FORCE)
+add_subdirectory(gtest)
 
-    add_subdirectory(gtest)
+ivw_folder(gtest ext)
+ivw_folder(gtest_main ext)
+ivw_folder(gmock ext)
+ivw_folder(gmock_main ext)
 
-    ivw_folder(gtest ext)
-    ivw_folder(gtest_main ext)
-
-    ivw_folder(gmock ext)
-    ivw_folder(gmock_main ext)
-
-    if(BUILD_SHARED_LIBS)
-        target_compile_definitions(gtest PRIVATE -DGTEST_CREATE_SHARED_LIBRARY=1)
-        target_compile_definitions(gtest INTERFACE -DGTEST_LINKED_AS_SHARED_LIBRARY=1)
-    endif()
+if(BUILD_SHARED_LIBS)
+    target_compile_definitions(gtest PRIVATE -DGTEST_CREATE_SHARED_LIBRARY=1)
+    target_compile_definitions(gtest INTERFACE -DGTEST_LINKED_AS_SHARED_LIBRARY=1)
 endif()
