--- a/modules/cimg/CMakeLists.txt
+++ b/modules/cimg/CMakeLists.txt
@@ -82,8 +82,8 @@ ivw_register_license_file(NAME tiff TARGET TIFF::TIFF MODULE CImg
 
 # The current OpenEXR has some problems with regards to packaging. So for now we make it optional.
 # When the packaging is fixed this option should be removed.
-option(IVW_CIMG_USE_OPENEXR  "Add OpenEXR image format support (HDR images) " ON)
-if(IVW_CIMG_USE_OPENEXR)
+option(IVW_USE_OPENEXR  "Add OpenEXR image format support (HDR images) " ON)
+if(IVW_USE_OPENEXR)
     add_subdirectory(ext/openexr)
     
     ivw_register_license_file(NAME "OpenEXR" TARGET OpenEXR::IlmImf MODULE CImg
