--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -1,8 +1,6 @@
-#--------------------------------------------------------------------
 # Inviwo Base Module
 ivw_module(Base)
 
-#--------------------------------------------------------------------
 # Add header files
 set(HEADER_FILES
     include/modules/base/algorithm/algorithmoptions.h
@@ -127,8 +125,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-
-#--------------------------------------------------------------------
 # Add source files
 set(SOURCE_FILES
     src/algorithm/algorithmoptions.cpp
@@ -244,7 +240,6 @@ set(SOURCE_FILES
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-#--------------------------------------------------------------------
 # Unit tests
 set(TEST_FILES
     tests/unittests/base-unittest-main.cpp
@@ -255,9 +250,9 @@ set(TEST_FILES
 )
 ivw_add_unittest(${TEST_FILES})
 
-#--------------------------------------------------------------------
 # Create module
 ivw_create_module(${SOURCE_FILES} ${MOC_FILES} ${HEADER_FILES})
-if(IVW_BENCHMARKS)
+
+if(IVW_TEST_BENCHMARKS)
     add_subdirectory(tests/benchmarks)
 endif()
